Stylowanie formularza rejestracji i stworzenie formularza logowania

--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- app.component.html -->
 <div class="container">
-  <app-registation-form></app-registation-form>
+  <!-- <app-registation-form></app-registation-form> -->
+  <app-login-form></app-login-form>
 </div>
