--- a/medical_visits_angular/src/app/home-page-logged/home-page-logged.component.html
+++ b/medical_visits_angular/src/app/home-page-logged/home-page-logged.component.html
@@ -9,11 +9,11 @@
 <div id="MV_head"><img src="./assets/MV_icon.png" id="MV_png">MedicalVisits</div>
 
 <div class="top_buttons">
-    <div class="head_buttons"><button class="button_style">LOG IN</button></div>
-    <div class="head_buttons"><button class="button_style">SIGN UP</button></div>
+    <div class="head_buttons"><button class="button_style">MY ACCOUNT</button></div>
+    <div class="head_buttons"><button class="button_style">LOG OUT</button></div>
 </div>
 
 <div class="main_page_photo"></div>
 
 <div id="main_page_head">WELCOME</div>
-<div class="main_button"><button class="main_button_style">START HERE</button></div>
+<div class="main_button"><button class="main_button_style" style="font-size: 34px;">Book your appointment</button></div>
