--- a/medical_visits_angular/src/app/app.component.html
+++ b/medical_visits_angular/src/app/app.component.html
@@ -1,5 +1,7 @@
 <!-- app.component.html -->
 <div class="container">
+  <!-- <app-home-page></app-home-page> -->
   <!-- <app-registation-form></app-registation-form> -->
-  <app-login-form></app-login-form>
+  <!-- <app-login-form></app-login-form> -->
+  <app-home-page-logged></app-home-page-logged>
 </div>
