--- a/medical_visits_angular/src/app/registation-form/registation-form.component.css
+++ b/medical_visits_angular/src/app/registation-form/registation-form.component.css
@@ -7,7 +7,7 @@ form{
     text-align: center;
     margin: auto;
     width: 700px;
-    height: 850px;
+    height: 1020px;
 }
 
 input{
@@ -42,13 +42,13 @@ input.ng-invalid.ng-touched {
 
 .error-message {
     color: red;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: bold;
 }
 
 .inputs{
     width: 100%;
-    height: 55px;
+    height: 70px;
     margin: 5px 5px 0px 5px;
 }
 
@@ -74,7 +74,7 @@ input.ng-invalid.ng-touched {
     top: 50px;
     left: 10px;
     width: 60px;
-    height: 400px;
+    height: 500px;
     background: #FFFFFF;
     box-shadow: 0px 5px 100px rgba(0, 0, 0, 0.25);
     border-radius: 8px;
@@ -128,10 +128,13 @@ input.ng-invalid.ng-touched {
 
 label{
     margin-top: 2px;
+    color: #28587A;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 input[type="radio"]{
-    width: 20px;
+    width: 35px;
 }
 
 .menu_icons{
@@ -145,17 +148,7 @@ input[type="radio"]{
     margin-left: 2px;
 }
 
-#home_page{
+#home_page, #contact, #doctor, #calendar{
     width: 50px;
-    margin-left: 2px;
-}
-
-#contact{
-    width: 50px;
-    margin-left: 2px;
-}
-
-#documents{
-    width: 35px;
     margin-left: 2px;
 }
